samples/_failures_safe/1761006176_9ecd38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30fcb18c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_30fcb18c.c:169:17: error: expected ‘)’ at end of input
  169 |     switch (type
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_30fcb18c.c:169:5: error: expected declaration or statement at end of input
  169 |     switch (type
      |     ^~~~~~
